added more tests, refactored some classes
Final commit (haha)